# lab_01

./: .gitignore  CMakeLists.txt
include/: suit_functions.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: functions.cpp  main  main.cpp
